# ubuntu-notes

./: .gitignore  LaTeX.md  README.md  command.md  config.md  docker.md  error.md  expression.md  fun.md  gitconfig  graphics.md  hard.md  install-rog14.md  mac.md  material.docx  net.md  other.md  password.doc  remote.md  soft.md  terminator_config  web for software.doc
Linux/: docker.md  gitconfig  python.md  命令.md  学学.md  (+3 more)
docker/cuda/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  manager-config.yaml  manager.py  pyproject.toml  test_cuda.sh  util.sh
docker/cuda/doc/: README-arm64.md  README-ppc64le.md  README.md  dev.md  supported-tags.md  unsupported-tags.md
docker/cuda/manifests/: cuda.yaml  rc-push-repos.yml
docker/cuda/templates/: README.md
docker/cuda/templates/gitlab/: gitlab-ci.yml.jinja
docker/cuda/templates/redhat/: base-dockerfile.j2  base-nvidia-ml.repo.j2  cudnn-dockerfile.j2  devel-dockerfile.j2  runtime-dockerfile.j2
docker/cuda/templates/redhat/legacy/base/: Dockerfile.jinja  cuda.repo.jinja
docker/cuda/templates/redhat/legacy/cudnn/: Dockerfile.jinja
docker/cuda/templates/redhat/legacy/devel/: Dockerfile.jinja
docker/cuda/templates/redhat/legacy/runtime/: Dockerfile.jinja
docker/cuda/templates/ubuntu/: base-dockerfile.j2  cudnn-dockerfile.j2  devel-dockerfile.j2  runtime-dockerfile.j2
docker/cuda/test/: 00-nvidia-smi.bats  01-samples.bats  02-ld-library-path.bats  03-tools.bats  04-install.bats  05-arch.bats  06-check-nvidia-require-cuda.bats  README.md  helpers.bash
docker/cuda/test/scripts/: bats_install.sh  run_tests.sh
(+57 files in other folders)
